# python-template

./: .gitignore  .pre-commit-config.yaml  .templatesyncignore  LICENSE  README.md  environment.yml  lint.toml  pyproject.toml  requirements-dev.txt  test.py
.github/: dependabot.yml
.github/workflows/: linting.yml  radon.yml  template-sync.yml  tests.yml
docs/source/: conf.py  index.rst
src/: __init__.py  keep_it.py
test/: test_keep_it.py
