[tool.poetry]
name = "name"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "src"}]

[tool.poe.tasks]
lint = "mypy ./src/**/*.py"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^0.991"
poethepoet = "^0.17.1"

[tool.autopep8]
max_line_length = 120
ignore = "W6"
in-place = true
recursive = true
select = ["E2", "E10", "E11", "E122", "E124", "E125", "E127", "E129", "E133", "E3", "E4", "E5", "E7", "W2", "W3"]

[tool.mypy]
python_version = "3.10"
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_explicit = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
no_implicit_reexport = true
strict_equality = true
show_column_numbers = true
strict_concatenate = true